objects/EFX__Efax_Recipients__c.object
<CustomObject>
    <fields>
        <fullName>EFX__Company__c</fullName>
        <formula>EFX__Contact__r.Account.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Completed__c</fullName>
        <description>The date and time at which the efax was sent to the recipient from the salesforce system.</description>
        <inlineHelpText>The date and time at which the efax was sent to the recipient from the salesforce system.</inlineHelpText>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFX__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Efax Recipients</relationshipLabel>
        <relationshipName>Efax_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFX__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>STORED</fullName>
                </value>
                <value>
                    <fullName>NOT_STORED</fullName>
                </value>
                <value>
                    <fullName>Pending Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EFX__To__c</fullName>
        <description>The fax number of the recipient</description>
        <inlineHelpText>The fax number of the recipient</inlineHelpText>
        <label>To</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EFX__eFax_Id__c</fullName>
        <externalId>true</externalId>
        <label>Fax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__eFax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>eFax</label>
        <referenceTo>EFX__efax__c</referenceTo>
        <relationshipName>Efax_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>eFax Recipient</label>
    <listViews>
        <fullName>EFX__All_Efax_Recipients</fullName>
        <columns>NAME</columns>
        <columns>EFX__Completed__c</columns>
        <columns>EFX__Status__c</columns>
        <columns>EFX__To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Efax Recipients</label>
    </listViews>
    <nameField>
        <label>Efax Recipients Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eFax Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>